--- a/params.yaml
+++ b/params.yaml
@@ -17,12 +17,12 @@ split_data :
 estimators :
   ElasticNet :
     params :
-      alpha : 0.88
-      l1_ratio : 0.11
+      # alpha : 0.88
+      # l1_ratio : 0.11
       # alpha : 0.9
       # l1_ratio : 0.4
-      #alpha : 0.2
-      #l1_ratio : 0.2
+      alpha : 0.2
+      l1_ratio : 0.2
 
 model_dir : saved_models
 
@@ -31,3 +31,12 @@ reports :
   scores : report/scores.json
 
 webapp_model_dir : prediction_service/model/model.joblib
+
+mlflow_config : 
+  artifacts_dir : artifacts
+  experiment_name : ElasticNet_regression
+  run_name : mlops 
+  registered_model_name : ElasticNameWineModel
+  remote_server_uri : http://127.0.0.1:1234
+
+  
